refactor(manual): tiny refactor to increase test coverage